2019-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	Update texinfo-tex-test.texi.

	* doc/texinfo-tex-test.texi (Final page of index hard to balance):
	Update the description of what the output should look like.  
	(Changed on 2017-11-16).

2019-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/Makefile.am (EXTRA_DIST): List texinfo-tex-test.WIDOWs.

2019-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	Update copyright years.

	* info/info.c (main),
	* texindex/ti.twjr: 2019.

2019-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	Prepare for pretest release.

	* util/srclist-txi: Remove EMACSSRC.
	Add a per-user override.
	* util/srclist.txt: Remove info.texi, as this is not distributed 
	with Texinfo any more.  Update to three-column format used now 
	by gnulib srclist-update.  Update locations of automake files.
	* README-hacking: Update instructions for git.
	* configure.ac (TEXINFO_DTD_VERSION): Increase to 6.6.
	* doc/refcard/txirefcard.tex: Update version and copyright year.  
	Document @& and @ampchar.

2019-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: automake 1.16.

2019-01-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Remove some obsolete or personal instructions.

2019-01-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/multiple-completions.sh: New test.

2019-01-03  Gavin Smith  <gavinsmith0123@gmail.com>

	Fix unclosed @inlinefmtifelse.

	* tp/Texinfo/XS/parsetexi/separator.c (handle_comma): If we run 
	out of input inside @inlinefmtifelse, exit the function.  This 
	matches change to Perl code made on 2018-10-29.

2019-01-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Update instructions to use git.

2019-01-03  Gavin Smith  <gavinsmith0123@gmail.com>

	Update gnulib.

	* (top-level), tp/Texinfo/XS: Run gnulib-tool --add-import.

2019-01-03  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove documentation of \ifusebracesinindexes conditional.
