@@ -1,4 +1,4 @@
-/* Copyright 2014, 2015 Free Software Foundation, Inc.
+/* Copyright 2014-2019 Free Software Foundation, Inc.
 
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -12,6 +12,8 @@
 
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>. */
+
+#include <config.h>
 #include <stdarg.h>
 #include <stdio.h>
 
