@@ -1,5 +1,5 @@
 /* end_line.c -- what to do at the end of a whole line of input
-/* Copyright 2010-2018 Free Software Foundation, Inc.
+/* Copyright 2010-2019 Free Software Foundation, Inc.
 
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -14,6 +14,7 @@
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 
+#include <config.h>
 #include <stdlib.h>
 #include <string.h>
 #include <ctype.h>
