@@ -1,4 +1,4 @@
-/* Copyright 2010-2018 Free Software Foundation, Inc.
+/* Copyright 2010-2019 Free Software Foundation, Inc.
 
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -15,6 +15,7 @@
 
 #define _GNU_SOURCE
 
+#include <config.h>
 #include <stdlib.h>
 #include <string.h>
 
