@@ -1,4 +1,4 @@
-/* Copyright 2014, 2015 Free Software Foundation, Inc.
+/* Copyright 2014-2019 Free Software Foundation, Inc.
 
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -14,6 +14,7 @@
    along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 
 #define _GNU_SOURCE
+#include <config.h>
 #include <stdlib.h>
 #include <string.h>
 #include <stdio.h>
