@@ -1,5 +1,9 @@
 2019-01-04  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* tp/Texinfo/XS/parsetexi: Include config.h in all files.
+
+2019-01-04  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	Update texinfo-tex-test.texi.
 
 	* doc/texinfo-tex-test.texi (Final page of index hard to balance):
